Files are updated with correct indentation

--- a/01-Basics/01-AutoConfiguration/01. Need of Autoconfiguration.md
+++ b/01-Basics/01-AutoConfiguration/01. Need of Autoconfiguration.md
@@ -1,7 +1,5 @@
 Step 1: Create a Plain Java Class (POJO)
-java
-Copy
-Edit
+```java
 // File: com/example/service/MyService.java
 package com.example.service;
 
@@ -10,12 +8,12 @@ public class MyService {
         System.out.println("Service called!");
     }
 }
+```
+
 🔍 Just a simple class, no Spring annotations.
 
 🧩 Step 2: Define the Bean in XML (applicationContext.xml)
-xml
-Copy
-Edit
+```xml
 <!-- File: src/main/resources/applicationContext.xml -->
 <beans xmlns="http://www.springframework.org/schema/beans"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -26,12 +24,11 @@ Edit
     <!-- Bean Definition -->
     <bean id="myService" class="com.example.service.MyService"/>
 </beans>
+```
 📌 Every bean must be manually defined with an id and fully qualified class name.
 
 🧩 Step 3: Load Spring Context and Fetch Bean Manually
-java
-Copy
-Edit
+```java
 // File: com/example/MainApp.java
 package com.example;
 
@@ -51,27 +48,25 @@ public class MainApp {
         myService.serve();
     }
 }
+```
 ✅ No magic. You need to manually get the bean from the context.
 
 🧩 Step 4: Add Spring Dependencies
 If using Maven:
 
-xml
-Copy
-Edit
+```xml
 <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-context</artifactId>
     <version>5.3.30</version> <!-- Or latest -->
 </dependency>
+```
 🧪 You must also configure the project manually (no starter dependencies like Spring Boot).
 
 🧩 Optional: Inject One Bean into Another
 Let’s say you have:
 
-java
-Copy
-Edit
+```java
 public class OrderService {
     private MyService myService;
 
@@ -84,26 +79,18 @@ public class OrderService {
         System.out.println("Order placed!");
     }
 }
+```
 Define it in applicationContext.xml like this:
 
-xml
-Copy
-Edit
+```xml
 <bean id="orderService" class="com.example.service.OrderService">
     <property name="myService" ref="myService"/>
 </bean>
+```
 And access it like this:
 
-java
-Copy
-Edit
+```java
 OrderService orderService = (OrderService) context.getBean("orderService");
 orderService.placeOrder();
-🧩 Summary of Manual Steps (Legacy Style)
-Step	Task	Manual Effort?
-1	Create POJO	✅ Yes
-2	Write XML to define bean	✅ Yes
-3	Load Spring context manually	✅ Yes
-4	Fetch beans by ID from context	✅ Yes
-5	Inject dependencies via XML	✅ Yes
-6	Add dependencies (Maven/Gradle)	✅ Yes
+```
+
