--- a/01-Basics/01-AutoConfiguration/02. Java Based Configuration.md
+++ b/01-Basics/01-AutoConfiguration/02. Java Based Configuration.md
@@ -1,7 +1,5 @@
 Step 1: Create a Component Class
-java
-Copy
-Edit
+```java
 // File: com/example/service/MyService.java
 package com.example.service;
 
@@ -13,14 +11,13 @@ public class MyService {
         System.out.println("Service called!");
     }
 }
+```
 ✅ @Component tells Spring to manage this class as a bean.
 
 🧩 Step 2: Enable Component Scanning
 Create a Java-based config class:
 
-java
-Copy
-Edit
+```java
 // File: com/example/config/AppConfig.java
 package com.example.config;
 
@@ -31,12 +28,11 @@ import org.springframework.context.annotation.Configuration;
 @ComponentScan(basePackages = "com.example")
 public class AppConfig {
 }
+```
 📌 This replaces XML <context:component-scan> and <bean> definitions.
 
 🧩 Step 3: Use ApplicationContext to Load Config
-java
-Copy
-Edit
+```java
 // File: com/example/MainApp.java
 package com.example;
 
@@ -56,14 +52,13 @@ public class MainApp {
         myService.serve();
     }
 }
+```
 🔍 No XML, just pure Java configuration.
 
 🧩 Step 4: Injecting Dependencies Between Beans
 Let's say you have another class that depends on MyService:
 
-java
-Copy
-Edit
+```java
 // File: com/example/service/OrderService.java
 package com.example.service;
 
@@ -85,38 +80,23 @@ public class OrderService {
         System.out.println("Order placed!");
     }
 }
+```
 ✅ Spring automatically injects MyService using constructor injection.
 
 🧩 Step 5: Run and Use the Bean
 Update MainApp.java:
 
-java
-Copy
-Edit
+```java
 OrderService orderService = context.getBean(OrderService.class);
 orderService.placeOrder();
+```
 🧩 Required Maven Dependencies
 Still the same:
 
-xml
-Copy
-Edit
+```xml
 <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-context</artifactId>
     <version>5.3.30</version> <!-- Or latest -->
 </dependency>
-🧩 Summary of Steps (Annotation-Based Style)
-Step	Task	Manual Effort?
-1	Annotate classes with @Component	✅ Yes
-2	Define config class with @Config	✅ Yes
-3	Use AnnotationConfigAppContext	✅ Yes
-4	Dependency Injection with @Autowired	✅ Yes
-5	Add Maven dependencies	✅ Yes
-
-✅ Key Differences from XML Style
-Feature	XML-Based	Annotation-Based
-Bean Declaration	XML <bean> tags	@Component, @Service, etc.
-DI Configuration	<property> in XML	@Autowired in Java classes
-Context Initialization	ClassPathXmlApplicationContext	AnnotationConfigApplicationContext
-Config Location	XML file	@Configuration class
+```
